--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -2,7 +2,6 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-  
 <h:head>
   
 </h:head>
@@ -11,13 +10,13 @@
       <h:form>
             <p:messages id="messages" />
             <p:panelGrid columns="2">
-                  <p:outputLabel for="userEmail" value="email email:" />
-                  <p:inputText id="userEmail" value="#{LoginMB.user.userEmail}" />
+                  <p:outputLabel for="userEmail" value="email:" />
+                  <p:inputText id="userEmail" value="#{LoginMB.user.email}" />
                    
                   <p:outputLabel for="password" value="Password:" />
                   <p:password id="password" value="#{LoginMB.user.password}" />
                    
-                  <p:commandButton value="Enviar" icon="ui-icon-star" action="#{LoginMB.send}" ajax="false">
+                  <p:commandButton value="Enviar" icon="ui-icon-star" action="#{LoginMB.send()}" ajax="false">
                   </p:commandButton>
   
             </p:panelGrid>
