Testing bookDAO went ok!

--- a/WebContent/main.xhtml
+++ b/WebContent/main.xhtml
@@ -11,6 +11,7 @@
       <h:form>
   
             <p:outputLabel value="Login efetuado com sucesso! Bem vindo ao sistema!"></p:outputLabel>
+            #{LoginMB.user.email}
       </h:form>
 </h:body>
 </html>
