New user form working. Login bugs squashed.

--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -50,7 +50,7 @@
 				
 				<div class="ui-g">
 					<div class="ui-g-12">
-						<p:link value="Não é cadastrado? Cadastre-se!" output="/novoUsuario.xhtml"/>
+						<p:link value="Não é cadastrado? Cadastre-se!" outcome="newUser"/>
 					</div>
 				</div>
 			</h:form>		
