--- a/WebContent/main.xhtml
+++ b/WebContent/main.xhtml
@@ -60,9 +60,7 @@
 	                <p:commandButton rendered="#{LoginMB.isAdm}"  action="#{bookView.deleteBook}" value="Deletar" icon="ui-icon-trash" update="bookTable">
 	                	<f:setPropertyActionListener target="#{bookView.selected}" value="#{book}"/>
 	                </p:commandButton>
-	                <p:commandButton rendered="#{!LoginMB.isAdm}"  action="#{bookView.reserve}" value="Reservar" icon="ui-icon-trash" update="bookTable">
-	                	<f:setPropertyActionListener target="#{bookView.selected}" value="#{book}"/>
-	                </p:commandButton>
+	                <p:button rendered="#{!LoginMB.isAdm}" style="width: 100%" outcome="reserveBook" value="Reservar" icon="ui-icon-plus" />	                
 	            </p:column>
 	        </p:dataTable>
       	</div>
