--- a/WebContent/reservedBooks.xhtml
+++ b/WebContent/reservedBooks.xhtml
@@ -45,9 +45,7 @@ input, button {
 
 				<p:column>
 					<f:facet name="header">Opções</f:facet>
-					<p:commandButton rendered="#{LoginMB.isAdm}"
-						action="#{bookView.deleteBook}" value="Deletar"
-						icon="ui-icon-trash" update="bookTable">
+					<p:commandButton rendered="#{LoginMB.isAdm}" value="Conceder">
 						<f:setPropertyActionListener target="#{bookView.selected}"
 							value="#{book}" />
 					</p:commandButton>
