--- a/WebContent/main.xhtml
+++ b/WebContent/main.xhtml
@@ -60,7 +60,7 @@
 	                <p:commandButton rendered="#{LoginMB.isAdm}"  action="#{bookView.deleteBook}" value="Deletar" icon="ui-icon-trash" update="bookTable">
 	                	<f:setPropertyActionListener target="#{bookView.selected}" value="#{book}"/>
 	                </p:commandButton>
-	                <p:commandButton rendered="#{!LoginMB.isAdm}" disabled="#{!book.available}"  action="#{rentView.requestRent}" value="Reservar" icon="ui-icon-trash" update="bookTable">
+	                <p:commandButton rendered="#{!LoginMB.isAdm}"  action="#{rentView.requestRent}" value="Reservar" icon="ui-icon-trash" update="bookTable">
 	                	<f:setPropertyActionListener target="#{rentView.selected}" value="#{book}"/>
 	                	<f:setPropertyActionListener target="#{rentView.renter}" value="#{LoginMB.user}"/>
 	                </p:commandButton>       	                
