--- a/WebContent/main.xhtml
+++ b/WebContent/main.xhtml
@@ -67,6 +67,7 @@
 	            </p:column>
 	        </p:dataTable>
 	        <p:button rendered="#{LoginMB.isAdm}" style="width: 100%" outcome="reservedBooks" value="Reservas" icon="ui-icon-plus" />
+	        <p:button rendered="#{LoginMB.isAdm}" style="width: 100%" outcome="dueReturn" value="Receber" icon="ui-icon-plus" />
       	</div>
 	</div>
 </h:body>
